--- a/package.json
+++ b/package.json
@@ -3,9 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "antd": "^3.26.15",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.8.0",
+    "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
+    "react-beautiful-dnd": "^11.0.5",
+    "react-bootstrap": "^1.0.0",
+    "react-burger-menu": "^2.6.13",
+    "react-highlight-words": "^0.16.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-sidebar": "^3.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
