--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engine": {
+    "node": "13.7.0",
+    "npm": "6.13.6"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
