--- a/package.json
+++ b/package.json
@@ -7,27 +7,30 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.8.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
+    "react": "^16.13.1",
     "react-beautiful-dnd": "^11.0.5",
     "react-bootstrap": "^1.0.0",
     "react-burger-menu": "^2.6.13",
+    "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scripts": "3.4.1",
     "react-sidebar": "^3.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
