--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.8",
     "antd": "^3.26.15",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
@@ -21,6 +22,7 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
+    "react-pdf": "^4.1.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
