--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
-    "formik": "^2.1.4",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
@@ -31,11 +30,10 @@
     "react-sidebar": "^3.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1",
-    "yup": "^0.28.5"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
